trunk/Archive2/6c/9cb4ecaaf70d1c/output
main.cpp: In function 'int main()':
main.cpp:14:37: error: array must be initialized with a brace-enclosed initializer
         Foo * array[5] = (new Foo[5]);
                                     ^
main.cpp:14:15: warning: unused variable 'array' [-Wunused-variable]
         Foo * array[5] = (new Foo[5]);
               ^
